# falcon-policy-scoring

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  SECURITY.md  STIG_HARDENING.md  SUPPORT.md  docker-compose.yml  k8s-deploy.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yaml  pylint-ondemand.yml  test.yml
config/: README.md  example.config.yaml
config/grading/: content_update_policies_grading.json  device_control_policies_grading.json  firewall_policies_grading.json  it_automation_policies_grading.json  ods_scheduled_scan_policies_grading.json  prevention_policies_grading.json  response_policies_grading.json  sca_policies_grading.json  sensor_update_policies_grading.json
docs/: content-update-policies.md  device-control-policies.md  firewall-policies.md  it-automation-policies.md  json-output.md  ods-scans.md  policy-audit-daemon-mode.md  policy-audit-interactive-mode.md  policy-grading-system.md  prevention-policies.md  response-policies.md  sca-policies.md  sensor-update-policies.md  understanding-the-tool.md  zero-trust-assessment-policies.md
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  persistent-volume-claim.yaml  rbac.yaml  secret.yaml  service.yaml
src/falcon_policy_scoring/: __init__.py  __main__.py
src/falcon_policy_scoring/cli/: __init__.py  cli_setup.py  constants.py  context.py  data_fetcher.py  filters.py  formatters.py  helpers.py  operations.py  output_strategies.py  schema.py  sorters.py
src/falcon_policy_scoring/daemon/: __init__.py  main.py  (+5 more)
tests/: README.md  __init__.py  conftest.py  run_e2e_tests.sh  test_cli_operations.py  test_config_validation.py  test_daemon.py  test_database_adapters.py  test_database_integration.py  test_e2e_smoke.py  test_env_overlay.py  test_grading_engine.py  test_grading_rollup.py  test_integration_workflows.py.TODO  test_ods_coverage.py  test_ods_grading.py  test_output_strategies.py  test_response_grading.py
tests/adapters/: __init__.py  test_dynamodb_adapter.py  test_foundry_collections_adapter.py  test_mariadb_adapter.py  test_sqlite_adapter.py  test_tinydb_adapter.py
tests/fixtures/: __init__.py  falcon_mocks.py  sample_data.py  vcr_config.py
tests/test_falconapi/: __init__.py  test_hosts.py  test_policies.py
(+61 files in other folders)
